fix builds running on macosx